preventing navbar from overlapping

--- a/css/exhibition.css
+++ b/css/exhibition.css
@@ -1,9 +1,13 @@
+.section-one {
+    padding-top: 120px;
+}
+
 .human {
     background-image: url('../images/human.png');
     background-size: cover;
     background-repeat: no-repeat;
     padding-top: 400px;
-    margin-top: 40px;
+    padding-bottom: 100px;
 }
 
 .text-on-top-one {
@@ -13,8 +17,8 @@
     width: 200px;
     padding: 5px;
     border-radius: 10px;
-    margin-top: -390px;
-    margin-left: 50px;
+    margin-top: -480px;
+    margin-left: 70px;
 }
 
 h2 {
@@ -22,7 +26,7 @@ h2 {
 }
 
 .text-container-one {
-    margin-top: 350px;
+    margin-top: 420px;
     margin-left: 10px;
 }
 
@@ -153,12 +157,8 @@ h2 {
 @media (min-width: 375px) {
 
 .text-on-top-one {
-    margin-top: -380px;
-    margin-left: 120px;
-}
-
-.text-container-one {
-    margin-top: 350px;
+    margin-top: -490px;
+    margin-left: 140px;
 }
 
 .text-on-top-two {
@@ -191,13 +191,13 @@ h2 {
 }
 
 .text-on-top-one {
-    margin-top: -580px;
-    margin-left: 160px;
+    margin-top: -680px;
+    margin-left: 210px;
 }
 
 .text-container-one {
     width: 350px;
-    margin-top: 0px;
+    margin-top: 100px;
     margin-left: 20px;
     padding-top: 450px;
 }
@@ -251,8 +251,8 @@ h2 {
 
 .text-on-top-one {
     padding: 10px;
-    margin-top: -740px;
-    margin-left: 220px;
+    margin-top: -880px;
+    margin-left: 280px;
 }
 
 .text-on-top-one,
@@ -262,7 +262,7 @@ h1 {
 
 .text-container-one {
     width: 450px;
-    margin-top: 140px;
+    margin-top: 300px;
     margin-left: 40px;
 }
 
@@ -323,6 +323,17 @@ h1 {
 /*larger sizes*/
 @media (min-width: 700px) {
 
+.human {
+   border-top: 100px solid #fff;
+   border-left: 20px solid #fff;
+   border-right: 20px solid #fff;
+}
+
+.text-on-top-one {
+    margin-top: -820px;
+    margin-left: 360px;
+}
+
 .open-science {
     margin-left: 250px;
 }
@@ -340,19 +351,9 @@ h1 {
 /*larger sizes*/
 @media (min-width: 768px) {
 
-.human {
-    width: 460px;
-    margin-left: 152px;
-}
-
-.text-on-top-one {
-    margin-left: 240px;
-    padding: 20px;
-}
-
 .text-container-one {
     margin-left: 152px;
-    margin-top: 240px;
+    margin-top: 400px;
 }
 
 .flex-container {
@@ -455,6 +456,12 @@ main {
     margin-left: 80px;
 }
 
+.human {
+    border-top: 40px solid #fff;
+    border-left: 0px solid #fff;
+    border-right: 80px solid #fff;
+}
+
 .text-container-two {
     margin-left: -80px;
 }
@@ -496,8 +503,11 @@ main {
 @media (min-width: 1350px) {
 
 main {
-    margin-top: 100px;
     margin-left: 280px;
+}
+
+.human {
+    background-size: 80%;
 }
 
 .text-container-one p {
@@ -594,19 +604,17 @@ main {
 @media (min-width: 1600px) {
 
 .human {
-    width: 800px;
-    padding-top: 1200px;
-    margin-left: -10px;
+    background-size: 70%;
+    padding-bottom: 300px;
 }
 
-.text-on-top-one  {
-    margin-top: -1150px;
-    margin-left: 400px;
-    padding: 40px;
+.text-on-top-one {
+    margin-top: -1000px;
+    margin-left: 500px;
 }
 
 .text-container-one {
-    margin-top: 680px;
+    margin-top: 480px;
     width: 500px;
 }
 
